<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Air Check</string>
    <string name="type">지역 종류 농도</string>
    <string name="co">일산화탄소 농도</string>
    <string name="no2">이산화질소 농도</string>
    <string name="pm10">미세먼지 농도</string>
    <string name="o3">오존 농도</string>
    <string name="so2">아황산가스 농도</string>

    <!--  BluetoothChat -->
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">연결중...</string>
    <string name="title_connected_to">connected to <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="title_not_connected">not connected</string>

    <!--  DeviceListActivity -->
    <string name="scanning">디바이스 검색중...</string>
    <string name="select_device">연결할 디바이스 선택</string>
    <string name="none_paired">연결된 디바이스가 없습니다.</string>
    <string name="none_found">디바이스를 찾을 수 없습니다.</string>
    <string name="title_paired_devices">등록 된 디바이스</string>
    <string name="title_other_devices">연결 가능한 디바이스</string>
    <string name="button_scan">연결 가능한 디바이스 검색</string>

</resources>
